fixes and formatting

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <img src="./img/who-are-we.svg" alt="">
                 </div>
 
-                <div class="col-md-8 order-md-2 section2">
+                <div class="col-md-7 offset-md-1 order-md-2 section2">
                     <h2 class="font-weight-bold">Who are we</h2>
                     <p class="mt-3 text-gray">More than 70% of tourists book on average at least one tourist service
                         during
@@ -158,10 +158,10 @@
 
             <section class="py-5">
                 <div class="container">
-                    <div class="col-md-4 offset-md-4  ">
+                    <div class="col-md-4 offset-md-4">
                         <h5 class="font-weight-bold text-center">Find out more about the GDPR</h5>
                     </div>
-                    <div class="col-md-4  offset-md-4  text-center">
+                    <div class="col-md-4 offset-md-4 text-center">
                         <a href="#" class=" btn btn-primary mt-4 btn-cta">Click Here</a>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                             <img src="./img/img-1.svg" alt="">
                         </div>
 
-                        <div class="col-md-8 order-md-2 section2">
+                        <div class="col-md-7 offset-md-1 order-md-2 section2">
                             <h4 class="font-weight-bold">INCREASE YOUR EARN</h4>
                             <p class="mt-3 text-gray">Send your guests a code to book a discounted tourist ser-
                                 vice on iDevia, a marketplace reserved for the best in-comming operators.
