--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="#">Termini e condizioni </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQs </a>
+                        <a class="nav-link" href="./faq.html">FAQs </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contatti </a>
