--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-light py-3">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="http://idevia.in/assets/img/logo.svg" style="height: 30px" alt="">
+                <img src="./img/logo.svg" style="height: 30px" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -307,7 +307,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="img-top">
-                            <img class="img-top" src="./img/logo-grey.svg" alt="">
+                            <img class="img-top" src="./img/logo-dark.png" alt="">
                             <br>
                             <p class="mt-3 text-gray">Copyright @2012-2018 VacaPlus.
                             </p>
