--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light py-3">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="./index.html">
                 <img src="./img/logo.svg" style="height: 30px" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -124,7 +124,7 @@
         </div>
     </section>
 
-    <section class="position-relative large-height">
+    <section class="position-relative large-height" id="section3">
         <div class="container">
             <div class="header py-5 mb-5">
                 <h2 class="font-weight-bold">Come funziona</h2>
@@ -166,7 +166,7 @@
 
     <!-- section-4 -->
 
-    <section class="large-height d-flex align-items-center">
+    <section class="large-height d-flex align-items-center" id="section3">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -174,7 +174,7 @@
                 </div>
             </div>
             
-            <div class="row align-items-center ">
+            <div class="row align-items-center mt-5">
 
                 <div class="col-md-4 order-md-1">
                     <img src="./img/todo.svg" alt="">
@@ -213,18 +213,18 @@
         </div>
     </section>
 
-    <section class="py-5 position-relative smaller-height d-flex align-items-center">
+    <section class="py-5 position-relative smaller-height d-flex align-items-center" id="section4">
         <div class="container">
             <div class="row align-items-center">
 
-                <div class="col-md-6  order-md-1">
+                <div class="col-md-4 offset-md-2 order-md-1">
                     <h2 class="font-weight-bold ">Prezzo</h2>
                     <h6 class="font-weight-bold ">€ 5,00 inclusa IVA al mese a struttura</h6>
                     <p class="mt-3 text-gray">Possibilità di disdetta in qualsiasi momento.
                     </p>
 
                 </div>
-                <div class="btn-left col-md-6 order-md-2 text-center">
+                <div class="btn-left col-md-4 order-md-2 text-center">
                     <a href="#" class=" btn btn-primary mt-4 btn-cta">Primo mese gratuito</a>
                 </div>
             </div>
