--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="#">Tariffe </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Termini e condizioni </a>
+                        <a class="nav-link" href="./terms.html">Termini e condizioni </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./faq.html">FAQs </a>
