--- a/terms.html
+++ b/terms.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light py-3">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="./index.html">
                 <img src="./img/logo.svg" data-style"height: 30px" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="#">Tariffe </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Termini e condizioni </a>
+                        <a class="nav-link" href="./terms.html">Termini e condizioni </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./faq.html">FAQs </a>
@@ -766,7 +766,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="img-top">
-                            <img class="img-top" src="./img/logo-grey.svg" alt="">
+                            <img class="img-top" src="./img/logo-dark.png" alt="">
                             <br>
                             <p class="mt-3 text-gray">Copyright @2012-2018 VacaPlus.
                             </p>
