--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     </p>
                 </div>
                 <div class="col-md-4 offset-md-2 order-md-2">
-                    <img src="./img/tourist.svg" alt="">
+                    <img src="./img/italy.svg" alt="">
                 </div>
             
             </div>
