--- a/terms.html
+++ b/terms.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-light py-3">
         <div class="container">
             <a class="navbar-brand" href="./index.html">
-                <img src="./img/logo.svg" data-style"height: 30px" alt="">
+                <img src="./img/logo.svg" style="height: 30px" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
