--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>iDevia</title>
+    <title>VacaPlus</title>
 </head>
 
 <body>
