--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light py-3">
+    <nav class="navbar navbar-expand-lg navbar-light py-3" id="topNav">
         <div class="container">
             <a class="navbar-brand" href="./index.html">
                 <img src="./img/logo.svg" style="height: 30px" alt="">
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="./faq.html">FAQs </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contatti </a>
+                        <a class="nav-link" href="#contact">Contatti </a>
                     </li>
                 </ul>
             </div>
@@ -180,7 +180,7 @@
                     <img src="./img/todo.svg" alt="">
                 </div>
 
-                <div class="col-md-6 offset-md-2 order-md-2 section2">
+                <div class="col-md-5 offset-md-2 order-md-2 section2">
                     <h4 class="font-weight-bold">Aumenta I Tuoi Guadagni</h4>
                     <p class="mt-3 text-gray">Invia ai tuoi ospiti un codice per prenotare un servizio turistico a prezzo scontato su Vacaplus, marketplace ad
                     accesso riservato ai migliori operatori incoming.
@@ -196,7 +196,7 @@
         <div class="container">
             <div class="row align-items-center">
             
-                <div class="col-md-6 order-md-1 ">
+                <div class="col-md-5 order-md-1 ">
                     <h4 class="font-weight-bold ">Affidaci La Gestione Della </h4>
                     <h4 class="font-weight-bold ">Tua Struttura</h4>
                     <p class="mt-3 text-gray">Utilizza i nostri servizi di accoglienza Guest 24/7, pulizia e fornitura biancheria, gestione account, adempimenti
@@ -213,7 +213,7 @@
         </div>
     </section>
 
-    <section class="py-5 position-relative smaller-height d-flex align-items-center" id="section4">
+    <section class="py-5 position-relative pricing-section d-flex align-items-center" id="section4">
         <div class="container">
             <div class="row align-items-center">
 
@@ -233,7 +233,7 @@
         <img src="./img/chaddi.svg" alt="" class="triangle-bg">
     </section>
 
-    <section class="py-5 large-height d-flex align-items-center mt-5">
+    <section class="py-5 large-height mt-5 d-flex align-items-center mt-5" id="contact">
         
         <div class="container">
             <div class="row align-items-center">
@@ -330,8 +330,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
@@ -349,6 +348,20 @@
             $('.expandable').css('display', 'none');
             $('.less').css('display', 'none');
             $('.more').css('display', 'block');
+        });
+
+        $("#topNav a").on('click', function (event) {
+
+            // Make sure this.hash has a value before overriding default behavior
+            if (this.hash !== "") {
+                event.preventDefault();
+                var hash = this.hash;
+                $('html, body').animate({
+                    scrollTop: $(hash).offset().top
+                }, 800, function () {
+                    window.location.hash = hash;
+                });
+            } // End if
         });
     </script>
 </body>
