--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                 <ul class="navbar-nav ml-auto">
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Chi siamo </a>
+                        <a class="nav-link" href="#section2">Chi siamo </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Come funziona </a>
+                        <a class="nav-link" href="#section3">Come funziona </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tariffe </a>
+                        <a class="nav-link" href="#section4">Tariffe </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./terms.html">Termini e condizioni </a>
@@ -72,8 +72,8 @@
                     
                     <br>Ottieni inoltre un reddito extra invitando i tuoi ospiti a prenotare servizi turistici professionali a prezzi scontati.
                     </p>
-                        <a href="#" class="btn btn-primary mt-4 btn-shadow btn-cta">Leggi di più</a>
-                        <a href="#" class="btn-color border-0 btn btn-primary btn-shadow mt-4 ml-3 btn-cta">Iniziare</a>
+                        <a href="#section3" class="btn btn-primary mt-4 btn-shadow btn-cta">Leggi di più</a>
+                        <a href="http://test.vacaplus.com/easyGDPR" class="btn-color border-0 btn btn-primary btn-shadow mt-4 ml-3 btn-cta">Iniziare</a>
                 </div>
 
             </div>
@@ -117,7 +117,7 @@
                     </div>
 
                     <a href="#" class="btn-link more"> Leggi di più</a>
-                    <a href="#" class="btn-link less"> Less</a>
+                    <a href="#" class="btn-link less"> Leggi meno</a>
 
                 </div>
             </div>
@@ -156,7 +156,7 @@
                     <h5 class="font-weight-bold text-center">Scopri di più sul GDPR</h5>
                 </div>
                 <div class="col-md-4 offset-md-4 text-center">
-                    <a href="#" class=" btn btn-primary mt-4 btn-cta">Clicca qui</a>
+                    <a href="http://test.vacaplus.com/easyGDPR" class=" btn btn-primary mt-4 btn-cta">Clicca qui</a>
                 </div>
             </div>
         </div>
@@ -166,7 +166,7 @@
 
     <!-- section-4 -->
 
-    <section class="large-height d-flex align-items-center" id="section3">
+    <section class="large-height mt-5 d-flex align-items-center" id="section3">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -287,13 +287,13 @@
                     <div class="col-md-4 ">
 
                         <h5 class="font-weight-bold">Azienda</h4>
-                            <ul class="p-0">
-                                <li>Chi siamo</li>
-                                <li> Come funziona</li>
-                                <li> Tariffe</li>
-                                <li> Termini e condizioni</li>
-                                <li> FAQs</li>
-                                <li> Contatti</li>
+                            <ul class="p-0 text1">
+                                <li><a class="" href="#section2">Chi siamo </a></li>
+                                <li><a class="" href="#section3">Come funziona </a></li>
+                                <li><a class="" href="#section4">Tariffe </a></li>
+                                <li><a class="" href="./terms.html">Termini e condizioni </a></li>
+                                <li><a class="" href="./faq.html">FAQs </a></li>
+                                <li><a class="" href="#contact">Contatti </a></li>
 
                             </ul>
 
