--- a/index.html
+++ b/index.html
@@ -17,38 +17,36 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light py-3" id="topNav">
-        <div class="container">
-            <a class="navbar-brand" href="./index.html">
-                <img src="./img/logo.svg" style="height: 30px" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <a class="navbar-brand" href="./index.html">
+            <img src="./img/logo.svg" style="height: 30px" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Chi siamo </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Come funziona </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Tariffe </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./terms.html">Termini e condizioni </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./faq.html">FAQs </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contatti </a>
-                    </li>
-                </ul>
-            </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Chi siamo </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Come funziona </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Tariffe </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./terms.html">Termini e condizioni </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./faq.html">FAQs </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contatti </a>
+                </li>
+            </ul>
         </div>
 
     </nav>
@@ -124,7 +122,7 @@
         </div>
     </section>
 
-    <section class="position-relative large-height" id="section3">
+    <section class="position-relative large-height py-5" id="section3">
         <div class="container">
             <div class="header py-5 mb-5">
                 <h2 class="font-weight-bold">Come funziona</h2>
