--- a/terms.html
+++ b/terms.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2">
                     <!-- ######## This is a comment  ######## -->
-                    <h2 class="western"><span data-style"font-family: 'Times New Roman', serif;"><span data-style"font-size: medium;"><span
+                    <h2 class="western" align="center"><span data-style"font-family: 'Times New Roman', serif;"><span data-style"font-size: medium;"><span
                                     data-style"color: #000000;"><sup><span data-style"font-size: small;"><u><strong>CONDIZIONI GENERALI DI SERVIZIO</strong></u></span></sup></span></span></span></h2>
                     <p class="western" >&nbsp;</p>
                     <p class="western" ><span data-style"font-family: 'Times New Roman', serif;"><span data-style"font-size: medium;"><span
