--- a/faq.html
+++ b/faq.html
@@ -42,11 +42,25 @@
                         <a class="nav-link" href="./terms.html">Termini e condizioni </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./faq.html">FAQs </a>
+                        <a class="nav-link" href="./faq.html">FAQ </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#contact">Contatti </a>
                     </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            Login
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="http://test.vacaplus.com/host">Login as host</a>
+                            <a class="dropdown-item" href="http://test.vacaplus.com/guest">Login as guest</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="http://test.vacaplus.com/register/">Create account</a>
+                        </div>
+                    </li>
+                    
                 </ul>
             </div>
         </div>
@@ -131,7 +145,7 @@
                                         <h6 class="panel-title">
                                             <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion"
                                                 href="#collapse3" aria-expanded="true" aria-controls="collapse3">
-                                                4. Se il codice del cliente non dovesse funzionare?
+                                                4. Cosa succede se il codice del cliente non dovesse funzionare?
                                             </a>
                                         </h6>
                                     </div>
@@ -315,7 +329,7 @@
                                     </div>
                                 </div>
 
-                                <div class="panel panel-default">
+                                <!-- <div class="panel panel-default">
                                     <div class="panel-heading p-3 " role="tab" id="heading14">
                                         <h6 class="panel-title">
                                             <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse14"
@@ -330,14 +344,14 @@
                                             Vacaplus ti mostrerà in tempo reale un’anteprima del messaggio che verrà recapitato al tuo Guest.</p>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <div class="panel panel-default">
                                     <div class="panel-heading p-3 " role="tab" id="heading15">
                                         <h6 class="panel-title">
                                             <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse15"
                                                 aria-expanded="true" aria-controls="collapse15">
-                                                16. Il codice che i Guest riceveranno per quanto tempo è valido?
+                                                15. Il codice che i Guest riceveranno per quanto tempo è valido?
                                             </a>
                                         </h6>
                                     </div>
@@ -374,7 +388,7 @@
                                 <li><a class="" href="./index.html">Come funziona </a></li>
                                 <li><a class="" href="./index.html">Tariffe </a></li>
                                 <li><a class="" href="./terms.html">Termini e condizioni </a></li>
-                                <li><a class="" href="./faq.html">FAQs </a></li>
+                                <li><a class="" href="./faq.html">FAQ </a></li>
                                 <li><a class="" href="./index.html">Contatti </a></li>
     
                             </ul>
@@ -397,7 +411,7 @@
                         <div class="img-top">
                             <img class="img-top" src="./img/logo-dark.png" alt="">
                             <br>
-                            <p class="mt-3 text-gray">Copyright @2012-2018 VacaPlus.
+                            <p class="mt-3 text-gray">Copyright @2007-2018 VacaPlus.
                             </p>
                         </div>
                     </div>
