--- a/terms.html
+++ b/terms.html
@@ -42,11 +42,26 @@
                         <a class="nav-link" href="./terms.html">Termini e condizioni </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./faq.html">FAQs </a>
+                        <a class="nav-link" href="./faq.html">FAQ </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contatti </a>
                     </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            Login
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="http://test.vacaplus.com/host">Login as host</a>
+                            <a class="dropdown-item" href="http://test.vacaplus.com/guest">Login as guest</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="http://test.vacaplus.com/register/">Create account</a>
+                        </div>
+                    </li>
+
+                    
                 </ul>
             </div>
         </div>
@@ -745,7 +760,7 @@
                                 <li><a class="" href="./index.html">Come funziona </a></li>
                                 <li><a class="" href="./index.html">Tariffe </a></li>
                                 <li><a class="" href="./terms.html">Termini e condizioni </a></li>
-                                <li><a class="" href="./faq.html">FAQs </a></li>
+                                <li><a class="" href="./faq.html">FAQ </a></li>
                                 <li><a class="" href="./index.html">Contatti </a></li>
     
                             </ul>
@@ -768,7 +783,7 @@
                         <div class="img-top">
                             <img class="img-top" src="./img/logo-dark.png" alt="">
                             <br>
-                            <p class="mt-3 text-gray">Copyright @2012-2018 VacaPlus.
+                            <p class="mt-3 text-gray">Copyright @2007-2018 VacaPlus.
                             </p>
                         </div>
                     </div>
